add check for outputted files, send notification when number of outputted files doesn't match expected

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,5 @@ OUTPUT_DIR=/out
 AUTHOR=root
 POLLING_CYCLE=3600
 DEBUG=False
+GOTIFY_URL=https://gotify.example.com
+GOTIFY_TOKEN=supersecuregotifytokengoeshere
