--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,14 +30,14 @@ services:
     volumes:
       - "./nginx.conf:/etc/nginx/conf.d/default.conf"
       - "./html:/var/www/html:ro"
-  example_sn2ssg:
-    container_name: example_sn2ssg
-    image: toozej/sn2ssg:latest
+  example_sn2ssg_py:
+    container_name: example_sn2ssg_py
+    image: toozej/sn2ssg-py:latest
     restart: always
     volumes:
       - "./site/content/post:/out"
     env_file:
-      - sn2ssg.env
+      - sn2ssg-py.env
     labels:
       - "traefik.enable=false"
       - "com.centurylinklabs.watchtower.enable=true"
