--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,8 @@
 SN_USERNAME=mysimplenoteaccount@email.com
 SN_PASSWORD=supersecurepasswordgoeshere
 TAG_TO_DOWNLOAD=blog:publish
+CONTINUOUS_NOTE_TAG=blog:thoughts
+TITLE_SUBSTITUTIONS="find1:replace1,find2:replace2"
 SSG_TYPE=hugo
 INPUT_DIR=/in
 OUTPUT_DIR=/out
