--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ minimum_pre_commit_version: "1.15"
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v4.6.0
     hooks:
       - id: check-yaml
         name: Check for valid YAML syntax in repo
@@ -42,25 +42,30 @@ repos:
       - id: check-hooks-apply
       - id: check-useless-excludes
 
-  - repo: https://github.com/psf/black
-    rev: 24.2.0
+  # Python Linter, Code Style, Error and Complexity Checker, and Formatter
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.5.5
     hooks:
-      - id: black
+      - id: ruff
+        args: [ "--fix", "--ignore", "E501,E203,E231,E722,C901" ]
+      - id: ruff-format
+        args: [ "--line-length", "100" ]
 
-  - repo: https://github.com/klen/pylama
-    rev: 8.4.1
+  # Find dead Python code
+  - repo: https://github.com/jendrikseipp/vulture
+    rev: v2.11
     hooks:
-      - id: pylama
-        args: ['-i', 'C901,E203,E501,E722']
+      - id: vulture
+        args: [ "--min-confidence", "80", "./sn2ssg.py" ]
 
   - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.8
+    rev: 1.7.9
     hooks:
       - id: bandit
         args: ["-iii", "-lll", "-q"]
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.15.1
+    rev: v3.17.0
     hooks:
       - id: pyupgrade
         args: ["--py311-plus"]
